# Yell

./: CMakeLists.txt  Compilation instructions Win MSYS.txt  Compilation instructions linux.txt  Compilation_2022_instruction.txt  FormulaParser.cpp  InputFileParser.cpp  InputFileParserI.cpp  InputFileParserII.cpp  InputFileParserIII.cpp  LICENSE  OutputHandler.cpp  OutputHandler.h  README.md  ReferenceTable.h  UnitCellParser.cpp  a_model.cpp  a_model.h  basic_io.h  check_variables.cpp  diffuser_core.h  main.cpp  main.yml  test_correlation_generator.h
.github/workflows/: c-cpp.yml  main.yml
cmake/: bitshuffle.cmake  hdf5.cmake
documentation/: reference.html  reference.md
lib/cctbx_stubs/scitbx/array_family/: operator_traits_builtin.h  small_algebra.h  tiny_algebra.h
lib/cctbx_stubs/scitbx/array_family/detail/: operator_functors.h  std_imports.h
src/: CMakeLists.txt  CeresMinimizer.cpp  CeresMinimizer.h  FormulaParser.cpp  FormulaParser.h  Grid.cpp  Grid.h  InputFileParser.cpp  InputFileParser.h  InputFileParserI.cpp  InputFileParserII.cpp  InputFileParserIII.cpp  IntensityMap.cpp  IntensityMap.h  LaueSymmetry.cpp  LaueSymmetry.h  Minimizer.cpp  Minimizer.h  OutputHandler.cpp  OutputHandler.h  ReferenceTable.cpp  UnitCellParser.h  basic_classes.cpp  basic_classes.h  basic_io.cpp  basic_io.h  diffuser_core.cpp  diffuser_core.h  exceptions.h  main.cpp  model.cpp  model.h  precompiled_header.h  test_correlation_generator.cpp  test_diffuser.h  test_runner.cpp
src/test_files/: 123.h5  variables.txt
